@@ -250,6 +250,12 @@
 -smartbacks
 -purify
 
+ XML
+*.xml
+-wordwrap
+-autoindent
+-syntax xml
+
  HTML
 *.htm
 -wordwrap
